# UR10e_Grasping

./: .gitmodules  README.md  gitmodules.txt
abdo_ws/src/: Commands  setup.py
abdo_ws/src/Some trial data/: poses.json
abdo_ws/src/app/: README.md  package.xml  setup.py
abdo_ws/src/app/app/: app.sh  camera_controller.py  grasp_detector.py  grasp_detector_2.py  grasp_detector_factory.py  grasp_detector_interface.py  grasp_pose_transformer.py  gripper_controller.py  myframe.py  robot_grasp_coordinator.py
abdo_ws/src/my_libs/: __init__.py
abdo_ws/src/my_pkg/: CMakeLists.txt  package.xml
abdo_ws/src/my_pkg/scripts/anygrasp_bridging/: anygrasp_application.py
abdo_ws/src/my_pkg/scripts/calibration/: 00p_calib_step_01.py  00p_calib_step_02.py  README.md  calibration.py  capturing_calibration_pictures&poses.py  sub_realsense.py
abdo_ws/src/my_ur_driver/: CMakeLists.txt  setup.py
abdo_ws/src/my_ur_driver/config/: results.json
abdo_ws/src/my_ur_driver/launch/: camera.launch.py  my.launch.py  my_camera.launch.py  my_moveit.launch.py  my_moveit_with_gripper.launch.py  my_ur.launch.py  my_ur_with_gripper.launch.py
abdo_ws/src/my_ur_driver/my_moveit_config/srdf/: my_world.macro.srdf.xacro  my_world_with_gripper.macro.srdf.xacro  my_world_with_gripper.srdf.xacro
abdo_ws/src/my_ur_driver/my_ur_config/ur_controllers/: ur_controllers.yaml
abdo_ws/src/my_ur_driver/my_ur_config/urdf/: my world.urdf.xacro  my_world.urdf.xacro  my_world_with_gripper.urdf.xacro
abdo_ws/src/my_ur_driver/realsense_calibration_data/: poses.json
abdo_ws/src/my_ur_driver/urdf/: my_world.urdf.xacro
(+5 files in other folders)
