<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>app</name>
  <version>0.0.0</version>
  <description>Integrated Grasp Detection and Robot Control System</description>
  <maintainer email="abdelrohman.atia@gmail.com">artc</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>open3d</depend>
  <depend>scipy</depend>
  <depend>torch</depend>
  <depend>numpy</depend>
  <depend>gsnet</depend>
  <depend>graspnetAPI</depend>
    <!-- Dependencies -->
  <depend>moveit_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <depend>control_msgs</depend>
  <exec_depend>ros-humble-control-msgs</exec_depend>
  <exec_depend>ros-<ros2-distro>-tf2-ros</exec_depend>
  <exec_depend>ros-<ros2-distro>-tf-transformations</exec_depend>
  <exec_depend>ros-<ros2-distro>-control-msgs</exec_depend>
  <exec_depend>ros-<ros2-distro>-cv-bridge</exec_depend>

  <depend>robotiq_2f_gripper_control</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

